more whitespace fix

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -63,7 +63,7 @@
   left: 0rem;
   border-top: 4px solid #ffffff;
   border-bottom: 4px solid #ffffff;
-  width: 100vw;
+  width: 100%;
   height: 4rem;
   display: flex;
   align-items: center;
